--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,5 +3,13 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
+    "configurations": [{
+        "name": "Connect to external",
+        "type": "go",
+        "request": "launch",
+        "mode": "auto",
+        "program": "${workspaceFolder}/main.go",
+        "env": {},
+        "args": ["csv", "postgresql://postgres:postgres@127.0.0.1:5432/test-db", "test_data", "--max-row-num", "10"]
+    }]
 }
