--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ simple-db-exporter*
 
 # Test binary, built with `go test -c`
 *.test
+*.csv
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
