--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,12 +23,12 @@ jobs:
       run: go build -v ./...
   
     - name: Start containers
-      run: docker-compose -f "docker/docker-compose-oracle.yml" up -d --build
+      run: docker-compose -f "./docker/docker-compose-oracle.yml" up -d --build
 
     # - name: Test
     #   run: go test -v ./...
 
     - name: Stop containers
       if: always()
-      run: docker-compose -f "docker/docker-compose-oracle.yml" down
+      run: docker-compose -f "./docker/docker-compose-oracle.yml" down
 
