--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,9 @@ jobs:
       run: go build -v ./...
   
     - name: Start containers
+      run: ls -la
+
+    - name: Start containers
       run: docker-compose -f "./docker/docker-compose-oracle.yml" up -d --build
 
     # - name: Test
