--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,9 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - 'feature/**-alpha'
   pull_request:
     branches: [ main ]
 
