--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,25 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
-        "name": "Connect to external",
+    "configurations": 
+    [
+        {
+        "name": "csv",
         "type": "go",
         "request": "launch",
         "mode": "auto",
         "program": "${workspaceFolder}/main.go",
         "env": {},
         "args": ["csv", "postgresql://postgres:postgres@127.0.0.1:5432/test-db", "test_data", "--max-row-num", "10", "--column", "NaMe"]
-    }]
+        },        
+        {
+        "name": "oracle export",
+        "type": "go",
+        "request": "launch",
+        "mode": "auto",
+        "program": "${workspaceFolder}/main.go",
+        "env": {},
+        "args": ["oracle", "user_test:user_test_password@localhost/xe", "run.sql", "new_table", "output"]
+        },
+    ]
 }
