--- a/docker/docker-compose-oracle.yml
+++ b/docker/docker-compose-oracle.yml
@@ -7,4 +7,4 @@ services:
     ports: 
         - 1521:1521
     volumes:
-        - ./init-oracle/init.sql /docker-entrypoint-initdb.d/init.sql
+        - ./init-oracle/init.sql:/docker-entrypoint-initdb.d/init.sql
