--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,13 +15,22 @@
         "args": ["csv", "postgresql://postgres:postgres@127.0.0.1:5432/test-db", "test_data", "--max-row-num", "10", "--column", "NaMe"]
         },        
         {
-        "name": "oracle export",
+        "name": "oracle",
         "type": "go",
         "request": "launch",
         "mode": "auto",
         "program": "${workspaceFolder}/main.go",
         "env": {},
         "args": ["oracle", "user_test:user_test_password@localhost/xe", "run.sql", "new_table", "output"]
+        },       
+        {
+        "name": "export",
+        "type": "go",
+        "request": "launch",
+        "mode": "auto",
+        "program": "${workspaceFolder}/main.go",
+        "env": {},
+        "args": ["export", "user_test:user_test_password@localhost/xe", "input", "output"]
         },
     ]
 }
